--- a/src/components/LiquidityHouse2/LiquidityHouse.module.scss
+++ b/src/components/LiquidityHouse2/LiquidityHouse.module.scss
@@ -1,12 +1,15 @@
 .lh {
     position: relative;
     display: flex;
-    align-items: center;
+   align-items: center;
+   justify-content: center;
     max-height: 22px;
     gap: 10px;
+    overflow-y: hidden;
+    z-index: 2;
     
 
-    :nth-child(2) {
+ /*    :nth-child(2) {
     margin-bottom: 34px;
 
         @media (min-width: 768px) {
@@ -16,7 +19,7 @@
            @media (min-width:1200px) {
            margin-bottom: 2px;
            }
-    }
+    } */
 
     @media (min-width: 768px) {
         max-height: 38px;
@@ -24,7 +27,7 @@
        }
 
        @media (min-width:1200px) {
-        max-height: 62px;
+        max-height: 60px;
         gap: 22px;
        }
 
@@ -32,6 +35,7 @@
         font-weight: 300;
        color:  #D9FFF0;
        font-size: 1.742rem;
+       line-height: 0;
       
 
        @media (min-width: 768px) {
@@ -46,41 +50,30 @@
 
 
 
-.logo-desktop {
+/* .logo-desktop {
 position: relative; 
-max-height: 22px;
+max-height: 22px; */
 
 .svg-desktop {
     width: 90px;
     position: relative;
     @media (min-width: 768px) {
-        max-height: 38px;
-        width: 150px;
-        margin-bottom: 16px;
+        height: 38px;
+        width: 160px;
        }
     
        @media (min-width:1200px) {
-        max-height: 64px;
-        width: 200px;
+        height: 64px;
+        width: 210px;
        }
 }
 
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
     max-height: 37px;
    }
 
    @media (min-width:1200px) {
     max-height: 64px;
-   }
-}
+   } */
+/* } */
 
-.logo2-desktop {
-    position: absolute;
-    left: 23.4%;
-    bottom: 7%;
-    z-index: 1;
-
-    > svg {
-        position: relative;
-    }
-}
